--- a/app/src/main/res/layout/community_detail.xml
+++ b/app/src/main/res/layout/community_detail.xml
@@ -91,7 +91,7 @@
                 android:id="@+id/cmdcontent"
                 style="@style/content"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="match_parent"
                 android:text="게시판 글" />
 
 
@@ -125,7 +125,7 @@
                 android:orientation="horizontal"
                 android:gravity="center">
             <EditText
-                android:layout_width="300dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content" />
                 <Button
                     android:layout_marginLeft="10dp"
