--- a/app/src/main/res/layout/join_main.xml
+++ b/app/src/main/res/layout/join_main.xml
@@ -15,6 +15,7 @@
         android:background="@color/titlebarcolor">
 
         <Button
+            android:id="@+id/back"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
