--- a/app/src/main/res/layout/login_search_id.xml
+++ b/app/src/main/res/layout/login_search_id.xml
@@ -9,6 +9,7 @@
         android:layout_height="30dp"
         android:layout_marginTop="20dp">
         <Button
+            android:id="@+id/back"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/back"
