--- a/app/src/main/res/layout/login_search_pw.xml
+++ b/app/src/main/res/layout/login_search_pw.xml
@@ -11,6 +11,7 @@
         android:layout_marginTop="20dp">
 
         <Button
+            android:id="@+id/back"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="10dp"
