--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,6 +39,7 @@
         <item name="android:textStyle">bold</item>
 
     </style>
+
     <style name="content">
         <item name="android:textSize">@dimen/contentSize</item>
         <item name="android:background">#f0f0f0</item>
@@ -48,7 +49,7 @@
 
 
     <style name="bartext">
-        <item name="android:textColor">#ffffff</item>
+        <item name="android:textColor">@color/basictxtcolor</item>
         <item name="android:textSize">@dimen/titlesize</item>
         <item name="android:layout_gravity">center</item>
     </style>
@@ -65,4 +66,13 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/homeListSize</item>
     </style>
+
+    <style name="AppTheme.NoActionBar.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.NoActionBar.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
