--- a/app/src/main/res/layout/notice_detail.xml
+++ b/app/src/main/res/layout/notice_detail.xml
@@ -89,6 +89,14 @@
                     android:text="첨부파일 : "
                     android:textSize="11dp" />
 
+                <Button
+                    android:id="@+id/btnDownload"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_marginLeft="5dp"
+                    android:background="@drawable/download"
+                    android:textColor="@color/basictxtcolor" />
+
                 <TextView
                     android:id="@+id/ndfilename"
                     style="@style/content"
@@ -98,13 +106,6 @@
                     android:text="파일이름"
                     android:textColor="@color/black"
                     android:textSize="11dp" />
-
-                <Button
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginLeft="5dp"
-                    android:background="@drawable/download"
-                    android:textColor="@color/basictxtcolor" />
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
